# telegram-bot-samokat

./: Dockerfile  pyproject.toml
telegram-bot/: config.py  main.py
telegram-bot/tests/: test_handlers.py
